--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 *.opendb
+*.aps
+*.rc
+*.vcxproj
+*.filters
+*.user
+*.h
+*.db
+*.sln
