--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /Lua与C交互学习/Lua与C交互学习/Debug/main.obj
 /Lua与C交互学习/Lua与C交互学习/Debug/vc140.idb
 /Lua与C交互学习/Lua与C交互学习/Debug/vc140.pdb
+/Lua与C交互学习/压入和获取/Debug/Lua与C交互学习.tlog
+/Lua与C交互学习/压入和获取/Debug
